# desafio-tecnico

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  script.sh
.github/workflows/: ci_cd.yaml
api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_consultas_delete_consultation.py  0003_alter_profissional_professional_register.py
api/tests/: test_ConsultationApiTest.py  test_ConsultationModelTest.py  test_ProfissionalApiTest.py  test_ProfissionalModelTest.py
lacrei_saude/: settings.py  urls.py  wsgi.py
