[project]
name = "lacrei-saude"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos98770",email = "eduardoabc.eduardo9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref (==3.10.0)",
    "django (==5.2.7)",
    "djangorestframework (==3.16.1)",
    "psycopg2-binary (==2.9.11)",
    "sqlparse (==0.5.3)",
    "django-cors-headers (==4.3.0)",
    "dj-database-url (>=3.0.1,<4.0.0)"
]

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^6.1.0"
pytest = "^8.0.0"
pytest-django = "^4.5.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
